[metadata]
name = xontrib-sh
version = 0.0.1
author = anki-code
author_email = anki-code
description = Paste and run sh-compatible commands in xonsh shell.
long_description = file: README.rst
url = https://github.com/anki-code/xontrib-sh
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages=xontrib
python_requires = >=3.5

install_requires =
    xonsh>=0.9.23

[options.package_data]
xontrib = *.xsh
